reference specific section to get code from
that section is only one tested so far

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    "source": [
     "### Ready to go...\n",
     "With the initial set-up out of the way, things are ready to go.  \n",
-    "Paste examples from the [Bokeh Gallery](https://bokeh.pydata.org/en/latest/docs/gallery.html) in any cells below and they should work. Two have been supplied already."
+    "Paste examples from almost any example in the 'Standalone Examples' section of  the [Bokeh Gallery](https://bokeh.pydata.org/en/latest/docs/gallery.html) in any cells below and they should work. Two have been supplied already."
    ]
   },
   {
